2012-03-13 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: change prepareMembers to avoid using retriving
	the index file content to a storage object (which creates problem
	in tracking its usage)
	* src/idirekte.cpp,...: flush the file to be written by
	ibis::index::write (to prevent the file manager from holding
	information about older version the file)
	* src/category.cpp:184 if the return value from read is less than
	0, we need to get rid of the existing index.  The previous test
	got it the wrong way.

2012-03-12 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp:458,459 change uint32_t back to int32_t
	(problem reported by Dominique)
	* src/irelic.cpp, ...: check the index type in functions that read
	from ibis::fileManager::storage objects to reconstitute indexes
	* src/dictioinary.cpp: fold input strings to upper case when the
	user desires case-insensitive comparisons of string values (note
	that the names are alwasy compared in the case-insensitive manner)

2012-03-10 John Wu <John dot Wu at ACM dot org>
	* src/util.h: correct typo: FASTBOT -> FASTBIT, change the test on
	FASTBIT_CS_PATTERN_MATCH to give users a chance to disable case
	sensitive matching (-DFASTBIT_CS_PATTERN_MATCH=0 to disable case
	sensitive matching)
	* src/bundle.cpp, ...: harmonize the use of FASTBIT_SYNC_WRITE to
	make _commit is called on windows systems when the macro is
	defined, some functions were missing this branch of the code

2012-03-09 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/category.cpp, src/dictionary.h, src/dictionary.cpp,
	src/util.h, src/util.cpp: enable case sensitive pattern matching,
	for additional information, see the following email message
	https://hpcrdm.lbl.gov/pipermail/fastbit-users/2012-March/001104.html

2012-03-09 John Wu <John dot Wu at ACM dot org>
	* tests/scripts/jrf-check.pl, tests/scripts/matchCounts.pl:
	redirect stderr to stdout so that the output from ibis can be