@@ -7,13 +7,13 @@ to build the library and the examples.  The following instructions are
 for customization and trouble-shooting your configuration and building
 process.
 
-On systems where make (or gmake) can support parallel builds, it is safe
-to invoke the parallel build options to build the library and the
+On systems where make (or gmake) support parallel builds, it is safe to
+invoke the parallel build options to build the library and the
 executables, for example,
 
 gmake -j 3 all
 
-Since it take a while (~ 20 min) to build the libraries, it is a good
+Since it take a while (~ 30 min) to build the libraries, it is a good
 idea to spawn multiple jobs to compile them.  However, it is NOT safe to
 run the tests in parallel because different jobs will attempt to write
 the same files.  The commands 'make check', 'make more-check', and 'make
@@ -43,6 +43,9 @@ For hopper.nersc.gov and other Cray XT machines, need options
 --disable-shared --without-getpwuid
 
 The preferred programming environment is PrgEnv-gnu on these machines.
+
+
+The file runconfig has a number of examples for different platforms.
 
 
 ----------
@@ -226,9 +229,9 @@ FASTBIT_CS_PATTERN_MATCH
 ----------
 Known Issues
 
-    If you have encountered an issue with FastBit code, this list of
-    known issues might be of help.  In addition, you might check out the
-    mailing list archive at
+    If you encounter an issue with FastBit code, please look through
+    this list of known issues first.  In addition, you might check out
+    the mailing list archive at
     <https://hpcrdm.lbl.gov/pipermail/fastbit-users/> to see if the
     issue has already been addressed.  The mail messages are searchable
     through the search boxes on any of the FastBit web pages.  Of course
@@ -240,7 +243,12 @@ Known Issues
     source code.  A nightly snapshot of the SVN repository for the code
     is available for download at
     <https://codeforge.lbl.gov/snapshots.php?group_id=44>.  The snapshot
-    is built daily between 2 and 3 AM Pacific Time zone (USA).
+    is built daily between 2 and 3 AM Pacific Time (USA).  You may also
+    check out a read-only copy from the source code repository with the
+    following command
+
+    svn checkout https://codeforge.lbl.gov/anonscm/fastbit
+
 
 (1) Many compilers will issue lots of warnings about potential loss of
     data in various assignments, for example, trying to assign a 32-bit
@@ -311,11 +319,11 @@ Known Issues
 (7) Certain linux clusters do not support shared libraries on compute
     nodes, even though shared libraries are supported on the front end.
     In such a case, the configure script will detect shared libraries as
-    supported.  Use option --disable-shared to prevent it from trying to
+    supported, but the executable will not be able to run on the compute
+    nodes.  Use option --disable-shared to prevent it from trying to
     build the shared library.  For example, Cray XT systems (e.g., XT4
     franklin.nersc.gov and XT5 hopper.nersc.gov) do not support shared
-    libraries on the compute nodes.  In fact on a Cray XT5 system,
-    it is not possible to produce a .so file.
+    libraries on the compute nodes.
 
 (8) FastBit makes extensive use of STL objects, this causes a problem
     when one wants to build a DLL on a windows machine.  There is at
@@ -323,12 +331,13 @@ Known Issues
     visual studio and build DLL successfully, see
     <https://hpcrdm.lbl.gov/pipermail/fastbit-users/2008-June/000127.html>.
 
-(9) The test case 12 of check-ibis fails when the PGI compiler is used
-    to compile the code.  This is most likely caused running the binary
-    excutable intended for compute node linux platform in the login
-    nodes.  Because the two platforms have different sets of run-time
-    libraries but nearly identical binary formats, the executable can
-    run but don't produce the correct results.
+(9) When the self-test in ibis.cpp is run with more than one thread, the
+    PGI compiled version fails.  This is likely caused PGI std::string
+    library or IO stream library neglecting to lock memory allocator.
+    The test case 12 of check-ibis has been changed to use only a single
+    thread to allow the problem to be passed unnoticed.  However, 'make
+    more-check' and 'make full-check' will not pass because they involve
+    tests with multiple threads.
 
 (10) If the configure script finds a working version of javac, but fails
      to find a working version of java, it is likely that CLASSPATH is
